fix: layout problem

--- a/packages/launcher-component/src/launcher/launcher.module.scss
+++ b/packages/launcher-component/src/launcher/launcher.module.scss
@@ -1,5 +1,6 @@
 .launcher {
-  padding: 10px;
+  background-color: #EDEDED;
+  padding: 20px;
 }
 
 .card {
